# CppTraininng

./: .gitignore  CMakeLists.txt
include/: BaseController.h  NetworkHelper.h  Person.h  Player.h  PostStruct.h  RequestCallbacks.h  RequestController.h
src/: NetworkHelper.cpp  RequestController.cpp  main.cpp
ui/: #main_window.glade#  main_window.glade
